--- a/style/pokedex.css
+++ b/style/pokedex.css
@@ -6,7 +6,7 @@
 
 @media screen and (min-width: 380px){
   .pokemons{
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
