--- a/style/global.css
+++ b/style/global.css
@@ -11,14 +11,12 @@
 }
 
 body{
-  background-color: greenyellow;
+  background-color: lightgreen;
 }
 
 .content{
   padding: 1rem;
-  width: 100vw;
-  height: 100vh;
-  background-color: white;
+  background-color: lightgray;
 }
 
 @media screen and (min-width: 992px){
